--- a/auxiliar.css
+++ b/auxiliar.css
@@ -74,8 +74,8 @@ nav {
 }
 
 .nav-container {
-  display: flex;
   width: 100%;
+  display: flex;
   align-items: center;
   justify-content: space-between;
   max-width: 1440px;
@@ -199,7 +199,7 @@ main {
   display: none;
 }
 
-/* @media screen and (max-width: 800px) {
+@media screen and (max-width: 880px) {
   .nav-container {
     padding-inline: 1rem;
   }
@@ -275,12 +275,27 @@ main {
   .main-container {
     display: flex;
     flex-direction: column-reverse;
+    width: 100%;
   }
 
   .main-left {
+    width: 100%;
     align-items: center;
     text-align: center;
     gap: 2rem;
+  }
+
+  .main-right {
+    width: 100%;
+  }
+
+  .desktop-image {
+    display: none;
+  }
+
+  .mobile-image {
+    display: block;
+    width: 100%;
   }
 
   .main-heading {
@@ -296,4 +311,4 @@ main {
     padding-inline: 1rem;
     flex-wrap: wrap;
   }
-} */
+}
